# cd-scripts

./: .env.sample  .gitignore  README.md  gitlab-pipeline-report.py  pyproject.toml
github/changelog/: github-changelog-mini.html  github-changelog-report.py  github-changelog.html  mini.css  mini.css.map  mini.scss  output.html  styles.css  styles.css.map  styles.scss  test.html
